--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,7 @@
 body {
-  background-image: url("images/pattern-background-desktop.svg");
+  background-image: url("../images/pattern-background-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
   background-color: hsl(225, 100%, 94%);
   text-align: center;
   font-size: 0.8rem;
